UPDATED 3 CATEGORY QUIZZES

--- a/app/src/main/res/layout/activity_category_avtivity.xml
+++ b/app/src/main/res/layout/activity_category_avtivity.xml
@@ -14,7 +14,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Flags"
+        android:text="Flags Quiz"
+        android:textColor="@android:color/white"
+        android:textSize="18sp" />
+
+    <Button
+        android:id="@+id/btn_logos"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Logo Quiz"
+        android:textColor="@android:color/white"
+        android:textSize="18sp" />
+
+    <Button
+        android:id="@+id/btn_trivia"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Trivia Quiz"
         android:textColor="@android:color/white"
         android:textSize="18sp" />
 
