--- a/app/src/main/res/layout/activity_category_avtivity.xml
+++ b/app/src/main/res/layout/activity_category_avtivity.xml
@@ -36,5 +36,23 @@
         android:textColor="@android:color/white"
         android:textSize="18sp" />
 
+    <Button
+        android:id="@+id/btn_grammar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Grammar Quiz"
+        android:textColor="@android:color/white"
+        android:textSize="18sp" />
+
+    <Button
+        android:id="@+id/btn_mathqs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Math Quiz"
+        android:textColor="@android:color/white"
+        android:textSize="18sp" />
+
 
 </LinearLayout>
