--- a/app/src/main/res/layout/activity_math_question.xml
+++ b/app/src/main/res/layout/activity_math_question.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    tools:context=".FlagsQuestionActivity">
+    tools:context=".MathQuestionActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,24 +21,8 @@
             android:gravity="center"
             android:textColor="#363A43"
             android:textSize="22sp"
-            tools:text="What country does this flag belong to?" />
+            tools:text="" />
 
-        <TextView
-            android:id="@+id/countdownText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:gravity="center"
-            android:textSize="18sp"
-            android:text="00:30" />
-
-        <ImageView
-            android:id="@+id/iv_image"
-            android:layout_width="355dp"
-            android:layout_height="150dp"
-            android:layout_marginTop="16dp"
-            android:contentDescription="image"
-            tools:src="@drawable/ic_flag_bulgaria" />
 
         <LinearLayout
             android:id="@+id/ll_progress_details"
@@ -136,6 +120,5 @@
             android:textColor="@android:color/white"
             android:textSize="18sp"
             android:textStyle="bold" />
-
     </LinearLayout>
 </ScrollView>
