--- a/app/src/main/res/layout/activity_flags_question.xml
+++ b/app/src/main/res/layout/activity_flags_question.xml
@@ -25,8 +25,8 @@
 
         <ImageView
             android:id="@+id/iv_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="262dp"
+            android:layout_height="118dp"
             android:layout_marginTop="16dp"
             android:contentDescription="image"
             tools:src="@drawable/ic_flag_bulgaria" />
