--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,52 +7,36 @@
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".MainActivity">
+
+
     <TextView
         android:id="@+id/tv_app_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="5dp"
         android:gravity="center"
         android:text="@string/app_name"
-        android:textColor="@android:color/white"
-        android:textSize="25sp"
+        android:textColor="@color/black"
+        android:textSize="30sp"
         android:textStyle="bold" />
 
-
-        android:id="@+id/cv_main"
+    <TextView
+        android:id="@+id/tv_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:background="@android:color/white"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="5dp">
+        android:gravity="center"
+        android:text="Quiz App"
+        android:textColor="#363A43"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
-        <LinearLayout
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="16dp">
 
-            <TextView
-                android:id="@+id/tv_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Welcome"
-                android:textColor="#363A43"
-                android:textSize="30sp"
-                android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/tv_description"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_marginTop="16dp"
-                android:text="Please enter your name."
-                android:textColor="#7A8089"
-                android:textSize="16sp" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_name"
@@ -66,7 +50,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:imeOptions="actionGo"
-                    android:hint="Name"
+                    android:hint="Please input your Name"
                     android:inputType="textCapWords"
                     android:textColor="#363A43"
                     android:textColorHint="#7A8089" />
@@ -80,6 +64,16 @@
                 android:text="Start"
                 android:textColor="@android:color/white"
                 android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/btn_result"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="16dp"
+            android:text="High Score"
+            android:textColor="@android:color/white"
+            android:textSize="13sp" />
         </LinearLayout>
 
 </LinearLayout>
