--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -6,14 +6,14 @@
     android:background="@drawable/gradient_back"
     android:orientation="vertical"
     android:gravity="center_horizontal"
-    android:padding="20dp"
+    android:padding="2dp"
     tools:context=".ResultActivity">
 
     <TextView
         android:id="@+id/tv_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="20dp"
         android:text="Result"
         android:textColor="@android:color/white"
         android:textSize="25sp"
@@ -27,22 +27,10 @@
         android:src="@drawable/ic_trophy" />
 
     <TextView
-        android:id="@+id/tv_congratulations"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Hey, Congratulations!"
-        android:textColor="@android:color/white"
-        android:textSize="25sp"
-        android:textStyle="bold"/>
-
-
-
-    <TextView
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="23dp"
         android:textColor="@android:color/white"
         android:textSize="22sp"
         android:textStyle="bold"
@@ -60,12 +48,22 @@
     <Button
         android:id="@+id/btn_finish"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="36dp"
         android:layout_marginTop="10dp"
         android:background="@android:color/white"
         android:text="FINISH"
-        android:textSize="18sp"
+        android:textSize="15sp"
         android:textStyle="bold" />
+
+
+    <TextView
+        android:id="@+id/tv_highscore"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
+        android:textColor="@android:color/white"
+        android:textSize="20sp"
+        tools:text="High Score" />
 
     <ListView
         android:id="@+id/lv_result"
