--- a/app/src/main/res/layout/activity_category_avtivity.xml
+++ b/app/src/main/res/layout/activity_category_avtivity.xml
@@ -9,9 +9,19 @@
     android:orientation="vertical"
     tools:context=".CategoryAvtivity">
 
+    <TextView
+        android:id="@+id/tv_cat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
+        android:textColor="@color/black"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        tools:text="Choose Category" />
     <Button
         android:id="@+id/btn_flags"
         android:layout_width="match_parent"
+
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Flags Quiz"
@@ -54,5 +64,13 @@
         android:textColor="@android:color/white"
         android:textSize="18sp" />
 
+    <Button
+        android:id="@+id/btn_history"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="History Quiz"
+        android:textColor="@android:color/white"
+        android:textSize="18sp" />
 
 </LinearLayout>
