--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,7 +71,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="16dp"
-            android:text="High Score"
+            android:text="Results"
             android:textColor="@android:color/white"
             android:textSize="13sp" />
         </LinearLayout>
